Initial setup of ADMOB

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
