--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.github.bmoliveira:snake-yaml:v1.18-android'
 }
 
 apply plugin: 'com.google.gms.google-services'
