--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.github.bmoliveira:snake-yaml:v1.18-android'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
