--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.github.bmoliveira:snake-yaml:v1.18-android'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
