Added selector for Gender and Race to front screen (selected information)

--- a/app/src/main/assets/yaml/racesAndSubraces.yaml
+++ b/app/src/main/assets/yaml/racesAndSubraces.yaml
@@ -66,10 +66,7 @@ halforc:
  racialLanguages: ["Orc"]
 human:
  name: "Human"
- subraces: [
- "",
- "Human Variant"
- ] 
+ subraces: []
  racialLanguages: []
 halfling:
  name: "Halfling"
