--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,9 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="me.kerooker.generatednpcs.GeneratedNpcsActivity"
-            android:configChanges="keyboardHidden|screenSize|orientation"
-            />
+        <activity
+            android:name="me.kerooker.generatednpcs.GeneratedNpcsActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation" />
+        <activity android:name="me.kerooker.generatednpcs.OpenNpcActivity"></activity>
     </application>
 
 </manifest>
