--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:testOnly="false"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,7 +21,7 @@
         <activity
             android:name="me.kerooker.generatednpcs.GeneratedNpcsActivity"
             android:configChanges="keyboardHidden|screenSize|orientation" />
-        <activity android:name="me.kerooker.generatednpcs.OpenNpcActivity"></activity>
+        <activity android:name="me.kerooker.generatednpcs.OpenNpcActivity" />
     </application>
 
 </manifest>
