--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'org.adw.library:discrete-seekbar:1.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.Mariovc:ImagePicker:1.0.5'
+    compile 'com.yalantis:ucrop:2.2.0'
     testCompile 'junit:junit:4.12'
 }
 
