--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
