--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ android:
     - build-tools-29.0.0
     - android-29
     - extra-google-m2repository
-    - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-21
 
 before_cache:
@@ -16,8 +15,18 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+env:
+  global:
+    # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
+
+# Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
