--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ android:
     - build-tools-29.0.0
     - android-29
     - extra-google-m2repository
-    - sys-img-armeabi-v7a-android-21
+    - tools
+    - platform-tools
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -23,7 +24,7 @@ env:
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list target
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
