--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ android:
     - extra-google-m2repository
     - tools
     - platform-tools
-    - sys-img-armeabi-v7a-google_apis-25
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -17,19 +16,6 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
-env:
-  global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - android list target
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
-  - QEMU_AUDIO_DRV=none emulator -avd test -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script:
-  - android list target
-  - ./gradlew connectedAndroidTest
+  - ./gradlew test
