--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://plugins.gradle.org/m2/" }
+
+
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha03'
+        classpath 'com.android.tools.build:gradle:3.6.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+        classpath 'io.fabric.tools:gradle:1.28.0'
+            }
 }
 
 allprojects {
     repositories {
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+
     }
 }
 
