Creates basic Robolectric test
Closes #9

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ org.gradle.configureondemand=false
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+android.enableUnitTestBinaryResources=true
