--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,16 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.28.0'
-            }
+    }
 }
 
 allprojects {
     repositories {
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url 'https://maven.google.com' }
         google()
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "http://dl.bintray.com/kotlin/inkotlin-eap" }
         maven { url "https://jitpack.io" }
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
