--- a/build.gradle
+++ b/build.gradle
@@ -15,14 +15,16 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-alpha05'
+        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.28.0'
+        classpath "io.objectbox:objectbox-gradle-plugin:2.3.4"
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
         maven { url 'https://maven.google.com' }
         google()
         jcenter()
