Implement My NPC Screen
Closes #19

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .cxx
 local/
 .idea/
+build/
+buildSrc/build/
+app/build
