--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.28.0'
         classpath "io.objectbox:objectbox-gradle-plugin:2.3.4"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'com.google.gms:google-services:4.3.3'  // Google Services plugin
+
     }
 }
 
