--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.kerooker.rpgnpcgenerator" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".RpgNpcGeneratorApplication"
@@ -11,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme.NoActionBar" >
         <activity android:name=".view.MainActivity"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
