--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.6.21'
     repositories {
         google()
         jcenter()
         mavenCentral()
-        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
-        maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://jitpack.io' }
         maven { url "https://plugins.gradle.org/m2/" }
 
@@ -15,27 +13,25 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'io.fabric.tools:gradle:1.28.0'
-        classpath "io.objectbox:objectbox-gradle-plugin:2.3.4"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
-        classpath 'com.google.gms:google-services:4.3.3'  // Google Services plugin
-        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.0'
+        classpath "io.objectbox:objectbox-gradle-plugin:2.9.0"
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
+        classpath 'com.google.gms:google-services:4.3.10'  // Google Services plugin
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
 
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         mavenLocal()
         maven { url 'https://maven.google.com' }
         google()
-        jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-        maven { url "http://dl.bintray.com/kotlin/inkotlin-eap" }
         maven { url "https://jitpack.io" }
-        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
 
     }
