--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,6 @@ org.gradle.configureondemand=false
 
 android.useAndroidX=true
 android.enableJetifier=true
-
-android.enableUnitTestBinaryResources=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
